--- a/spec/runtime/languages/golang/errors.txt
+++ b/spec/runtime/languages/golang/errors.txt
@@ -1,11 +1,14 @@
 ==========================================
-handles indented code after blocks
+indented code after blocks
 =========================================
+
 package trivial
 
   func one() {}
     func two() {}
+
 ---
+
 (program
     (package_directive (package_name))
     (func_declaration (var_name) (block_statement))
