Replace prec rule w/ left_assoc and right_assoc
Consider shift/reduce conflicts to be compilation errors unless
they are resolved by a specified associativity.

--- a/spec/runtime/languages/javascript/operators.txt
+++ b/spec/runtime/languages/javascript/operators.txt
@@ -95,11 +95,13 @@ a++ + b * c - d / e--
 
 ---
 (expression_statement
+  (math_op
     (math_op
-        (math_op (identifier))
-        (math_op
-            (math_op (identifier) (identifier))
-            (math_op (identifier) (math_op (identifier))))))
+      (math_op (identifier))
+      (math_op (identifier) (identifier)))
+    (math_op
+      (identifier)
+      (math_op (identifier)))))
 
 ==========================================
 boolean operators
