--- a/spec/runtime/languages/javascript/errors.txt
+++ b/spec/runtime/languages/javascript/errors.txt
@@ -6,7 +6,7 @@ stuff(|||);
 
 ---
 
-(expression_statement (function_call (identifier) (ERROR '|')))
+(expression_statement (function_call (identifier) (ERROR (UNEXPECTED '|'))))
 
 ==========================================
 errors in if statements
@@ -21,8 +21,9 @@ moreStuff();
 ---
 
 (program
-    (expression_statement (function_call (identifier)))
-    (if_statement (ERROR '*')
-        (statement_block (expression_statement (ERROR '*'))))
-    (expression_statement (function_call (identifier))))
-
+  (expression_statement (function_call (identifier)))
+  (if_statement
+    (ERROR (UNEXPECTED '*') (identifier))
+    (statement_block
+      (expression_statement (ERROR (UNEXPECTED '*') (identifier) (identifier)))))
+  (expression_statement (function_call (identifier))))
