Rename 'star' -> 'pointer' in C grammar
Now that bug is fixed that prevented tokens from working properly when
used anonymously and as named rules

--- a/spec/runtime/languages/c/declarations.txt
+++ b/spec/runtime/languages/c/declarations.txt
@@ -37,5 +37,5 @@ int main() {
 	(identifier) (direct_declarator (identifier))
   (compound_statement
 		(declaration (identifier) (identifier))
-		(declaration (identifier) (declarator (star) (direct_declarator (identifier))))
+		(declaration (identifier) (declarator (pointer) (direct_declarator (identifier))))
 		(declaration (identifier) (identifier))))
